regression/fail/type.1.sml
type t = {x: int, x: real}
